[metadata]
name = classic-locks
version = 1.0.0
description = Provides abstract classes for locks
author = Sergei Variasov, Pavel Lytkin
author_email = variasov@gmail.com, lytkin.po@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Development Status :: 1 - Beta


[options]
packages = find_namespace:
python_requires = ~=3.10
package_dir =
    = source
install_requires =
    classic-components~=1.2.0

[options.packages.find]
where = source

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2
    build~=0.7.0
    isort~=5.8.0
    yapf~=0.31.0
    toml~=0.10.2
    flake8~=5.0.4
    Flake8-pyproject~=1.1.0

postgres-psycopg2 =
    psycopg2-binary~=2.9.7

postgres-psycopg3 =
    psycopg[binary]~=3.1.0

postgres-sqlalchemy =
    SQLAlchemy~=2.0.15

mssql-pymssql =
    pymssql==2.2.7

mssql-sqlalchemy =
    SQLAlchemy>=2.0.15
